update team